build: bit o cleanup

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ThreeJS template</title>
+  <title>ThreeJS - just the Geotemplate</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
@@ -20,7 +20,7 @@
   </script>
 
   <header>
-    <h1>ThreeJS starter template</h1>
+    <h1>ThreeJS -> just the Geo</h1>
   </header>
 
   <main id="sceneContainer"></main>
