--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ThreeJS - just the Geotemplate</title>
+  <title>ThreeJS - just the Geometry</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
@@ -20,10 +20,21 @@
   </script>
 
   <header>
-    <h1>ThreeJS -> just the Geo</h1>
+    <h1>ThreeJS &rarr; just the Geometry</h1>
   </header>
 
+  <aside id="sceneNav">
+    <button class="btn" id="blue">color it Blue</button>
+    <button class="btn" id="green">color it Green</button>
+  </aside>
+
   <main id="sceneContainer"></main>
+
+  <div id="credits">
+    <p>
+      "Cuttlefish" (https://skfb.ly/66DOu) by robotgoat is licensed under Creative Commons Attribution-NonCommercial (http://creativecommons.org/licenses/by-nc/4.0/).
+    </p>
+  </div>
   
   <!-- <script src="libs/three.js"></script> -->
   <script type="module" src="main.js"></script>
